Thu Aug 26 10:11:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/Latency/Connector/LatencyTT_Test_Connector.mpc:
        * connectors/dds4ccm/performance-tests/Throughput/Connector/Throughput_Connector.mpc:
        * connectors/dds4ccm/performance-tests/Throughput/SecConnector/Throughput_Sec_Connector.mpc:
        * connectors/dds4ccm/tests/ConnectorFilesInDiffDir/DiffDir_Connector.mpc:
        * connectors/dds4ccm/tests/ContentFilteredTopic/CFTNamesClash/Component/CFT_Test_Component.mpc:
        * connectors/dds4ccm/tests/ContentFilteredTopic/CFTNamesClash/Connector/CFT_Test_Connector.mpc:
        * connectors/dds4ccm/tests/ContentFilteredTopic/EventListener/Connector/CFTLE_Test_Connector.mpc:
        * connectors/dds4ccm/tests/ContentFilteredTopic/Exception/Connector/Exception_Test_Connector.mpc:
        * connectors/dds4ccm/tests/ContentFilteredTopic/ReadGet/Connector/ReadGet_Test_Connector.mpc:
        * connectors/dds4ccm/tests/DDSWriterEntity/Receiver/Writer_Receiver.mpc:
        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender.mpc:
        * connectors/dds4ccm/tests/Derived/Derived_Connector.mpc:
        * connectors/dds4ccm/tests/NoModule/NoModule_Connector.mpc:
        * connectors/dds4ccm/tests/NonChangeableAttribute/Component/NonChangeable_Component.mpc:
        * connectors/dds4ccm/tests/OneFile/Multiple/OFM_Connector.mpc:
        * connectors/dds4ccm/tests/OneFile/Single/OneFile_Connector.mpc:
          More cleanup

Thu Aug 26 09:54:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/etc/DAnCE.doxygen:
          Fixed directories

        * connectors/dds4ccm/impl/DataReader.h:
        * connectors/dds4ccm/impl/DataReader.cpp:
        * connectors/dds4ccm/impl/DataReader_T.h:
        * connectors/dds4ccm/impl/DataReader_T.cpp:
        * connectors/dds4ccm/impl/DataWriter.h:
        * connectors/dds4ccm/impl/DataWriter_T.h: