@@ -32,7 +32,7 @@ namespace CIAO
     public:
       virtual ~CCM_DDS_DataReader_Base (void);
       
-      virtual DDSDataReader * get_impl_base (void) = 0;
+      virtual DDSDataReader * get_impl (void) = 0;
     };
   }
 }
