@@ -1,3 +1,11 @@
+Thu Aug 26 10:22:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/DataReader.h:
+        * connectors/dds4ccm/impl/DataReader_T.h:
+        * connectors/dds4ccm/impl/DataReader_T.cpp:
+        * connectors/dds4ccm/tests/DDSWriterEntity/Receiver/Writer_Receiver_exec.cpp:
+          Small tweaks to get access to RTI DataReader
+
 Thu Aug 26 10:11:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/performance-tests/Latency/Connector/LatencyTT_Test_Connector.mpc:
